--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ body {
     width: 100%;
 }
 
+p {
+    align-self: center;
+    width: 30%;
+}
 .logo {
     max-width: 400px;
     align-self: stretch;
